--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
+{% load widget_tweaks %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +10,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.3/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.3/dist/js/uikit-icons.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <style>
         html, body {
             margin: 0;
@@ -26,6 +29,11 @@
             z-index=0;
             margin-top: -200px;
         }
+
+        .uk-form-danger, .uk-form-danger:focus {
+            color: #f0506e !important;
+            border-color: #f0506e !important;
+        }
     </style>
 </head>
 <body>
@@ -34,27 +42,41 @@
             <ul class="uk-navbar-nav">
                 <li class="uk-active"><a href="">Home</a></li>
                 <li class="uk-parent"><a href="">About</a></li>
+                <li class="uk-parent"><a href="#get-advice">Get Advice</a></li>
                 <li><a href=""></a></li>
             </ul>
         </div>
     </nav>
-    <div class="video-container" style="overflow: hidden; height: 500px; z-index: 0;">
+    <div class="video-container" style="overflow: hidden; max-height: 500px; z-index: 0;">
         <video playsinline="" muted="" onplaying="this.controls=false" autoplay loop poster="/static/videos/video2_poster.jpg">
             <source src="/static/videos/video2.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
         </video>
         <div class="overlay">
             <h1 class="uk-width-1-3@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-heading-large"
-                style="background: rgb(51, 51, 51); color: rgb(250, 250, 250); padding-bottom: 15px;">Panel INC</h1>
+                style="background: rgb(51, 51, 51); color: rgb(250, 250, 250); padding-bottom: 15px;">Solar INC</h1>
         </div>
     </div>
 
     <div class="uk-section uk-section-secondary">
         <div style="max-width: 600px; margin: auto;">
-            <h1 class="uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-heading-medium">Get Advice</h1>
+            <h1 class="uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-heading-medium">
+                <a id="get-advice"></a>
+                Get Advice
+            </h1>
 
-            <form method="post" class="uk-form-horizontal uk-margin-large">
+            <form action="/#get-advice" method="post" class="uk-form-horizontal uk-margin-large">
                 {% csrf_token %}
 
+                {% if messages %}
+                <div class="uk-margin">
+                    {% for message in messages %}
+                    <div class="uk-alert-success" uk-alert>
+                            <a class="uk-alert-close" uk-close></a>
+                            <p>{{ message }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 {% if form.non_field_errors %}
                   <div class="uk-margin">
                     {% for err in form.non_field_errors %}
@@ -75,14 +97,17 @@
                 <div class="uk-margin">
                     <label class="uk-form-label">{{ field.label_tag }}</label>
                     <div class="uk-form-controls">
-                        {{ field.errors }}
-                        {{ field }}
-                        {{ field.help_text }}
+                        {% if field.errors %}
+                            {{ field|add_class:"uk-form-danger" }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                        <div>{{ field.errors }}</div>
                     </div>
                 </div>
                 {% endfor %}
                 <div class="uk-margin">
-                    <input class="uk-button uk-button-primary" type="submit" value="Submit">
+                    <input class="uk-button uk-button-primary uk-width-1-1" type="submit" value="Submit">
                 </div>
             </form>
         </div>
