--- a/templates/home.html
+++ b/templates/home.html
@@ -114,7 +114,7 @@
             {% else %}
                 <div class="uk-margin">
                     <a class="uk-button uk-button-default uk-width-1-2"
-                       style="float: left" href="/huser/#get-advice">Home</a>
+                       style="float: left" href="/huser/#get-advice">Individual</a>
                     <a class="uk-button uk-button-secondary uk-width-1-2"
                        style="float: right" href="/cuser/#get-advice">Commercial</a>
                 </div>
@@ -122,6 +122,7 @@
         </div>
     </div>
 
+    <!--
     <div class="uk-section uk-section-primary"><div class="uk-child-width-1-3@m" uk-grid
              uk-scrollspy="cls: uk-animation-slide-bottom; target: .uk-card; delay: 300; repeat: true"
              style="width: 65%; margin: 0 auto;">
@@ -145,6 +146,7 @@
             </div>
         </div>
     </div>
+    -->
 
     <div class="uk-section uk-section-secondary">
 
