Add rules to calculate panel selection etc

--- a/templates/home.html
+++ b/templates/home.html
@@ -198,7 +198,7 @@
                     Specifications
                 </h2>
                 <ul>
-                    <li>10 x {{panel}}</li>
+                    <li>{{total_panels}} x {{panel}}</li>
                     <li>Cell Type: {{panel.material|title}}</li>
                     <li>1 x {{battery}}</li>
                     <li>1 x {{inverter}}</li>
