--- a/templates/home.html
+++ b/templates/home.html
@@ -38,6 +38,13 @@
         .uk-card {
             height: auto;
         }
+        /*==================== 
+          Footer 
+          ====================== */
+        .page-footer {
+            padding-left: 50px;
+            background: #363334;
+        }
     </style>
 </head>
 <body>
@@ -245,5 +252,14 @@
     <div class="uk-section uk-section-secondary">
 
     </div>
+    <!-- Footer -->
+    <footer class="page-footer font-small blue">
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a href="/"> Solar Inc.</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
 </body>
 </html>
