--- a/templates/home.html
+++ b/templates/home.html
@@ -134,7 +134,7 @@
     {% else %}
     <h1 style="margin-top: 50px !important;" class="uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-heading-medium">
         <a id="solution"></a>
-        Our Solution
+        Proposed Solution
     </h1>
     <div class="uk-section uk-container">
         <div class="uk-child-width-1-2@m" uk-grid>
@@ -215,7 +215,6 @@
                     <li>Cost per Watt: ${{cost_per_watt}}</li>
                     <li>Cost per Hour: ${{cost_per_hour}}</li>
                     <li>Total Price: ${{total_price}}</li>
-                    <li></li>
                 </ul>
             </div>
         </div>
