fix rules for home systems

--- a/templates/home.html
+++ b/templates/home.html
@@ -207,13 +207,13 @@
                 <ul>
                     <li>{{total_panels}} x {{panel}}</li>
                     <li>Cell Type: {{panel.material|title}}</li>
-                    <li>1 x {{battery}}</li>
-                    <li>1 x {{inverter}}</li>
+                    <li>{{battery_amount}} x {{battery}}</li>
+                    <li>{{inverter_amount}} x {{inverter}}</li>
                     <li>Total Weight: {{total_weight}} grams</li>
                     <li>Total Area: {{total_area}} cm2</li>
                     <li>Total Wattage: {{total_watt}} Watts</li>
                     <li>Cost per Watt: ${{cost_per_watt}}</li>
-                    <li>Cost per Hour: ${{cost_per_hour}}</li>
+                    <li>Cost per Hour (10 year horizon): ${{cost_per_day}}</li>
                     <li>Total Price: ${{total_price}}</li>
                 </ul>
             </div>
