--- a/templates/home.html
+++ b/templates/home.html
@@ -192,7 +192,7 @@
                                 <li>Out: {{inverter.outut_voltage}} Volts</li>
                                 <li>{{inverter.watts}} Watts</li>
                                 <li>{{inverter.kind}}</li>
-                                <li>Price: {{battery.dollar_amount}}</li>
+                                <li>Price: {{inverter.dollar_amount}}</li>
                             </ul>
                         </div>
                     </div>
