finish home user

--- a/templates/home.html
+++ b/templates/home.html
@@ -213,7 +213,7 @@
                     <li>Total Area: {{total_area}} cm2</li>
                     <li>Total Wattage: {{total_watt}} Watts</li>
                     <li>Cost per Watt: ${{cost_per_watt}}</li>
-                    <li>Cost per Hour (10 year horizon): ${{cost_per_day}}</li>
+                    <li>Cost per kW/Hour (10 year horizon): ${{cost_per_hour}}</li>
                     <li>Total Price: ${{total_price}}</li>
                 </ul>
             </div>
