--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
         }
         .overlay {
             position: absolute;
-            top: 25%;
+            top: 240px;
             left: 0;
             right: 0;
             z-index: 1;
@@ -27,7 +27,7 @@
         .video-container video {
             position:relative;
             z-index=0;
-            margin-top: -200px;
+            margin-top: -20%;
         }
 
         .uk-form-danger, .uk-form-danger:focus {
@@ -58,12 +58,19 @@
         </div>
     </nav>
     <div class="video-container" style="overflow: hidden; max-height: 500px; z-index: 0;">
-        <video playsinline="" muted="" onplaying="this.controls=false" autoplay loop poster="/static/videos/video2_poster.jpg">
+        <video playsinline="" muted=""
+               onplaying="this.controls=false"
+               autoplay loop poster="/static/videos/video2_poster.jpg"
+               style="width: 100%;">
             <source src="/static/videos/video2.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
         </video>
         <div class="overlay">
-            <h1 class="uk-width-1-3@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-heading-large"
-                style="background: rgb(51, 51, 51); color: rgb(250, 250, 250); padding-bottom: 15px;">Solar INC</h1>
+            <h1 class="uk-text-center uk-margin-auto uk-margin-auto-vertical uk-heading-large"
+                style="background: rgb(51, 51, 51);
+                color: rgb(250, 250, 250);
+                padding-bottom: 15px;
+                width: 500px;
+                ">Solar INC</h1>
         </div>
     </div>
     {% if panel == None %}
