update url commercial; handle not finding solution

--- a/templates/home.html
+++ b/templates/home.html
@@ -133,7 +133,7 @@
                     <a class="uk-button uk-button-default uk-width-1-2"
                        style="float: left" href="/huser/#get-advice">Individual</a>
                     <a class="uk-button uk-button-secondary uk-width-1-2"
-                       style="float: right" href="/cuser/#get-advice">Commercial</a>
+                       style="float: right" href="/commercial/#get-advice">Commercial</a>
                 </div>
             {% endif %}
         </div>
